# LC

./: CMakeLists.txt  README.md  lc.json
eds/: lc.xml
fsw/mission_inc/: lc_mission_cfg.h
fsw/platform_inc/: lc_platform_cfg.h
fsw/src/: app_cfg.h  lc_action.c  lc_app.c  lc_app.h  lc_cmds.c  lc_custom.c  lc_dispatch.c  lc_tbl.h  lc_utils.c  lc_verify.h  lc_version.h  lc_watch.c
fsw/tables/: cpu1_lc_ini.json  lc_def_adt.c  lc_def_wdt.c
